[project]
name = "hwg-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "xlrd>=2.0.2",
]
